tests/e2e/semantics/service_output_unique2.error
Error: syntax error in story at line 2, column 20

2|        http server as a
                         ^

E0108: Service output `a` must be unique. Use `as outputName`
