tests/e2e/semantics/service_output_unique2.story
http server as a
    http server as a
        a = 0
